--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,7 @@ span {
   font-family: 'Poppins', 'Noto Sans', sans-serif, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
 }
+
+body {
+  background: #526A82;
+}
