--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,12 @@
   }
 }
 
-video {
-  width: 100%;
+.video {
+  width: 100vw;
+  height: 100%;
+  overflow: hidden;
 }
+
 .content {
   position: absolute;
   width: 100%;
@@ -49,4 +52,5 @@ video {
   justify-content: center;
   align-items: center;
   color: white;
+  max-height: 100%;
 }
