--- a/src/index.css
+++ b/src/index.css
@@ -14,19 +14,20 @@
 
 body {
   background: #526A82;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .skill {
-  font-size: 16px;
+  font-size: 10px;
   letter-spacing: 1px;
-  margin-bottom: 4px;
+  margin-bottom: 5px;
 }
 
 .progressBar {
   background: #959595;
+  margin-bottom: 5px;
   width: 600px;
-  height: 10px;
+  height: 5px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -35,7 +36,7 @@ body {
 }
 
 .progressBar div {
-  height: 10px;
+  height: 5px;
   border-radius: 5px;
   width: 0%;
   -webkit-border-radius: 5px;
@@ -45,14 +46,15 @@ body {
 }
 
 .progressBar div span {
-  height: 40px;
-  width: 40px;
+  height: 15px;
+  width: 30px;
+  font-size: 6px;
   border-radius: 50%;
-  background: #FFF;
+  background: #E0E5EB;
   float: right;
-  margin-top: -15px;
+  margin-top: -3px;
   margin-right: -20px;
-  color: #333;
+  color: #043263;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -71,7 +73,7 @@ body {
 .css {
   background: #cddc39;
   animation: css 1s linear forwards;
-  -webkit-animation: css 1s linear ;
+  -webkit-animation: css 1s linear forwards;
 }
 
 .apis {
@@ -89,9 +91,10 @@ body {
   animation: mysql 1s linear forwards;
 }
 
-.php {
+.net {
   background: #3398db;
-  animation: php 1s linear forwards;
+  animation: net 1s linear forwards;
+  -webkit-animation: net 1s linear forwards;
 }
 
 .react {
@@ -119,7 +122,7 @@ body {
   border: 1px solid #9b58b6;
 }
 
-.php span {
+.net span {
   border: 1px solid #3398db;
 }
 
@@ -135,7 +138,7 @@ body {
 
 @keyframes css {
   100% {
-    width: 90%;
+    width: 80%;
   }
 }
 
@@ -157,14 +160,14 @@ body {
   }
 }
 
-@keyframes php {
+@keyframes net {
   100% {
-    width: 70%;
+    width: 40%;
   }
 }
 
 @keyframes react {
   100% {
-    width: 60%;
+    width: 70%;
   }
 }
