--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(14px + 2vmin);
   color: white;
 }
 
@@ -41,6 +41,7 @@
   width: 100vw;
   height: 100%;
   overflow: hidden;
+  position: fixed;
 }
 
 .content {
@@ -52,5 +53,4 @@
   justify-content: center;
   align-items: center;
   color: white;
-  max-height: 100%;
 }
