--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #2b3445;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -53,4 +53,10 @@
   justify-content: center;
   align-items: center;
   color: white;
+}
+
+@media (max-width: 769px) {
+  .video {
+    display: none;
+  }
 }
